Hero-slider sin terminar (con JS)

--- a/html/index.html
+++ b/html/index.html
@@ -104,21 +104,17 @@
                         </div>
                     </div>
             
-                    <!-- <div class="slider__btn slider__btn-right" id="btn-right">&#62</div>
-                    <div class="slider__btn slider__btn-left" id="btn-left">&#60</div> -->
                 </div>
             </div>
-<!--     
-            <div class="background__hero"> -->
-            <div class="container">
+
+            <div class="container container-txt">
                 <div class="row container__hero">
                     <section class="hero col-12 col-md-6">
                         <h1 class="h1__hero">A pottery studio dedicated to creativity and community.</h1>
                         <button class="btn__hero btn btn-dark">TAKE A CLASS</button>
                     </section>
                 </div>
-            </div>    
-            <!-- </div> -->
+            </div>
         </div>
 
         <section class="container__about container" id="about">
