Fue añadido un preloader

--- a/html/index.html
+++ b/html/index.html
@@ -44,7 +44,10 @@
 </head>
 
 <body>
-    
+    <div class="loader">
+        <img src="/img/icons8-preloader.gif">
+    </div>
+
     <header class="header">
 
         <div class="container">
