--- a/html/index.html
+++ b/html/index.html
@@ -62,20 +62,19 @@
                 <!-- navbar desktop  -->
 
                 <div class="container__navbar-desktop col-md-6">
-                    <a href="#" class="a__navbar">CLASSES</a>
-                    <a href="#" class="a__navbar">MEMBERSHIPS</a>
-                    <a href="#" class="a__navbar">MORE</a>
+                    <a href="#" class="a__navbar" id="a__navbar">CLASSES</a>
+                    <a href="#" class="a__navbar" id="a__navbar">MEMBERSHIPS</a>
+                    <a href="#" class="a__navbar" id="a__navbar">MORE</a>
                 </div>
 
                 <!-- contenedor de iconos responsive-desktop -->
 
                 <div class="container__icon col-6 col-md-3">
-                    <a href="#" class="a__navbar"><i class="bi bi-search"></i></a>
-                    <a href="#" class="a__navbar"><i class="bi bi-person"></i></a>
-                    <a href="#" class="a__navbar"><i class="bi bi-cart3"></i></a>
+                    <a href="#" class="a__navbarI"><i class="bi bi-search"></i></a>
+                    <a href="#" class="a__navbarI"><i class="bi bi-person"></i></a>
+                    <a href="#" class="a__navbarI"><i class="bi bi-cart3"></i></a>
                     <div class="container__btnResponsive">
-                        <button type="button" class="btn__headerResponsive" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#id">
+                        <button type="button" class="btn__headerResponsive" id="hamburguesa">
                             <i class="bi bi-list"></i>
                         </button>
                     </div>
@@ -89,24 +88,26 @@
         <!-- SECTION SLIDER-HERO -->
 
         <div class="container-heroSlider">
+            <div>
                 <div class="container__slider">
                     <div class="slider" id="slider">
-                        <div class="slider__section">
-                            <img src="/img/fondoHero.jpg" alt="" class="slider__img">
-                        </div>
-                        <div class="slider__section">
-                            <img src="/img/Banner2.jpg" alt="" class="slider__img">
-                        </div>
-                        <div class="slider__section">
-                            <img src="/img/card6.jpg" alt="" class="slider__img">
-                        </div>
-                        <div class="slider__section">
-                            <img src="/img/card4.jpg" alt="" class="slider__img">
-                        </div>
+                            <div class="slider__section">
+                                <img src="/img/fondoHero.jpg" alt="" class="slider__img">
+                            </div>
+                            <div class="slider__section">
+                                <img src="/img/Banner2.jpg" alt="" class="slider__img">
+                            </div>
+                            <div class="slider__section">
+                                <img src="/img/card6.jpg" alt="" class="slider__img">
+                            </div>
+                            <div class="slider__section">
+                                <img src="/img/card4.jpg" alt="" class="slider__img">
+                            </div>
                     </div>
                 </div>
+            </div>
             <div class="container container-txt">
-                <div class="row container__hero">
+                <div class="container__hero">
                     <section class="hero col-12 col-md-6">
                         <h1 class="h1__hero">A pottery studio dedicated to creativity and community.</h1>
                         <button class="btn__hero btn btn-dark">TAKE A CLASS</button>
@@ -114,6 +115,7 @@
                 </div>
             </div>
         </div>
+
 
         <section class="container__about container" id="about">
             <div class="row about__me">
@@ -206,15 +208,12 @@
                 <h3 class="text-center">Formulario de Contacto</h3>
                 <form>
                     <div class="form-group">
-                        <label for="name"></label>
                         <input type="text" class="form-control" id="name" placeholder="Ingresa tu nombre" required>
                     </div>
                     <div class="form-group">
-                        <label for="email"></label>
                         <input type="email" class="form-control" id="email" placeholder="Ingresa tu correo" required>
                     </div>
                     <div class="form-group">
-                        <label for="message"></label>
                         <textarea class="form-control" id="message" rows="4" placeholder="Escribe tu mensaje aquí"
                             required></textarea>
                     </div>
